# WaveHunter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  check_sigint.py  find_flag.py  find_flag_deep.py  find_flag_exhaustive.py  find_flag_final.py  find_flag_ultra.py  pyproject.toml  requirements.txt
tests/: generate_test_wav.py  test_sigint.py  test_wavehunter.py
wavehunter/: __init__.py  cli.py
wavehunter/core/: audio.py  entropy.py  modem.py  pipeline.py  report.py  scoring.py  signal.py  signatures.py  stats.py  utils.py  validation.py
wavehunter/extractors/: bitplanes.py  channels.py  delta.py  graycode.py  interleave.py  multibit.py  parity.py  phase.py  printable.py  relationships.py  reverse.py  spread_spectrum.py  stride.py  wavelet.py
wavehunter/plugins/: base.py  manager.py
wavehunter/scanners/: ascii.py  compression.py  magic.py  regex.py
wavehunter/sigint/decoders/: decoder_library.py  pipeline.py
wavehunter/sigint/demodulation/: demodulators.py  synchronization.py
wavehunter/sigint/detection/: carrier.py  modulation.py
wavehunter/sigint/fingerprint/: __init__.py  audio_metadata.py  spectral.py
wavehunter/sigint/heuristics/: coordinator.py
wavehunter/sigint/intelligence/: patterns.py
wavehunter/sigint/reconstruction/: signals.py
wavehunter/sigint/visualization/: plots.py
wiki/: Command-Line-Interface.md  Data-Scanners.md  Home.md  Installation.md  Plugin-System.md  SIGINT-Analysis-Engine.md  Steganography-Extractors.md  _Sidebar.md
