[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavehunter"
version = "0.1.0"
description = "An open-source Python toolkit for audio forensics, steganography, CTFs, malware analysis, and reverse engineering"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Desandu Hettiarachchi" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "pywavelets>=1.4.0",
    "pycryptodome>=3.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
wavehunter = "wavehunter.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
